--- a/test.ipynb
+++ b/test.ipynb
@@ -16,6 +16,7 @@
         "id": "6606605e"
       },
       "source": [
+        "# Clone github repo and change working directory into it\n",
         "import os\n",
         "repoDir = '/content/EMIT_MMA_2025_test'\n",
         "if os.path.exists(repoDir) == False:\n",
